# Prograde

./: .appveyor.yml  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Camera_8cpp_source.html  Camera_8hpp_source.html  CelestialBodyDrawer_8cpp_source.html  CelestialBodyDrawer_8hpp_source.html  CelestialBody_8cpp_source.html  CelestialBody_8hpp_source.html  Color_8cpp_source.html  Color_8hpp_source.html  CoordinateSystem_8cpp_source.html  CoordinateSystem_8hpp_source.html  Drawer_8hpp_source.html  EccentricAnomalySolver_8cpp_source.html  EccentricAnomalySolver_8hpp_source.html  Exceptions_8hpp_source.html  Exceptions__default_8hpp_source.html  Exceptions__unix_8hpp_source.html  Gui_8cpp_source.html  Gui_8hpp_source.html  KerbalSystem_8cpp_source.html  KerbalSystem_8hpp_source.html  LauncherWindow_8cpp_source.html  LauncherWindow_8hpp_source.html  MainWindow_8cpp_source.html  MainWindow_8hpp_source.html  Matrix4x4_8cpp_source.html  Matrix4x4_8hpp_source.html  Orbit_8cpp_source.html  Orbit_8hpp_source.html  OrbitalSystemDrawer_8cpp_source.html  OrbitalSystemDrawer_8hpp_source.html  OrbitalSystem_8cpp_source.html  OrbitalSystem_8hpp_source.html  README.md  SimulationTime_8cpp_source.html  SimulationTime_8hpp_source.html  (+135 more)
cmake/: clang-dev-tools.cmake  doc.cmake
cmake/modules/: FindClangTidy3.8.cmake  FindClangTidy5.0.cmake  FindGSL.cmake
data/urho3d/CoreData/Shaders/GLSL/: FarCelestialBody.glsl
data/urho3d/CoreData/Techniques/: FarCelestialBody.xml
data/urho3d/Data/UI/: DefaultStyle.xml
dev/: clang-format-report.sh  clang-tidy-report.sh  doc-report.sh
ext/google-test/: CMakeLists.txt
ext/urho3d/: CMakeLists.txt
include/: doxygen_groups.hpp
include/exceptions/: Exceptions.hpp  Exceptions_default.hpp  Exceptions_unix.hpp
include/graphics/: Camera.hpp  Gui.hpp  LauncherWindow.hpp  MainWindow.hpp  SkyboxGenerator.hpp  Utils.hpp
include/graphics/drawers/: CelestialBodyDrawer.hpp  Drawer.hpp  OrbitalSystemDrawer.hpp
include/math/: CoordinateSystem.hpp  EccentricAnomalySolver.hpp  Matrix4x4.hpp  Vector3.hpp  Vector4.hpp  constants.hpp
include/physics/: CelestialBody.hpp  Color.hpp  Orbit.hpp  OrbitalSystem.hpp  SimulationTime.hpp  UniversalTime.hpp
include/physics/default-orbitalsystems/: KerbalSystem.hpp  SolarSystem.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  groups_2.js  search.js  variables_0.js  variables_1.js  variables_2.js  (+1 more)
src/: main.cpp
src/graphics/: Camera.cpp  Gui.cpp  LauncherWindow.cpp  MainWindow.cpp  SkyboxGenerator.cpp  Utils.cpp
src/graphics/drawers/: CelestialBodyDrawer.cpp  OrbitalSystemDrawer.cpp
src/math/: CoordinateSystem.cpp  EccentricAnomalySolver.cpp  Matrix4x4.cpp  Vector3.cpp  Vector4.cpp
src/physics/: CelestialBody.cpp  Color.cpp  Orbit.cpp  OrbitalSystem.cpp  SimulationTime.cpp
src/physics/default-orbitalsystems/: KerbalSystem.cpp  SolarSystem.cpp
test/: main.cpp
test/math/: EccentricAnomalySolverTest.cpp  Vector3Test.cpp
test/physics/: OrbitTest.cpp
